--- a/FINAL DELIVERABLES/FINAL CODE/TEMPLATES/base.html
+++ b/FINAL DELIVERABLES/FINAL CODE/TEMPLATES/base.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous">
-        <link href="{{ url_for('static',filename='css/custom.css') }}" rel="stylesheet" type="text/css" />
+        <link href="{{ url_for('static',filename='css/sample.css') }}" rel="stylesheet" type="text/css" />
         <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 
@@ -167,7 +167,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
         <!-- Custom JS Scripts -->
-        <script src="{{ url_for('static',filename='js/myscripts.js') }}"></script>
-        <script src="{{ url_for('static',filename='js/validate.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/script.js') }}"></script>
+        <script src="{{ url_for('static',filename='js/test.js') }}"></script>
     </body>
 </html>
